--- a/package.json
+++ b/package.json
@@ -1,21 +1,8 @@
 {
-  "name": "ui-neumorphism",
+  "name": "@beebls/ui-neumorphism-yellow",
   "version": "1.1.3",
   "description": " React components library for neumorphism UI/UX trend.",
-  "author": "AKAspanion",
   "license": "MIT",
-  "repository": "AKAspanion/ui-neumorphism",
-  "keywords": [
-    "ui",
-    "react",
-    "reactjs",
-    "react-js",
-    "neumorphic",
-    "neumorphism",
-    "skeuomorphism",
-    "ui-neumorphism",
-    "neumorphism-ui"
-  ],
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "module": "dist/index.modern.js",
